2002-07-02  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/show_comics.pod: Fixed unterminated list.

2002-06-29  Sven Hartge  <netcomics@ds9.argh.org>

        * lib/keenspot: correct $hof for avalon

2002-06-17  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomicsrc: Added an example to how to fill out
	@selected_comics.

2002-06-15  Sven Hartge  <netcomics@ds9.argh.org>

        * MANIFEST, Makefile.PL, lib/grimmy, lib/toonville: added new
	  module for Mother Goose and Grimm, Bug #568112

2002-06-12  Sven Hartge  <netcomics@ds9.argh.org>

        * lib/dragon: fix Bug #568073

2002-06-10  Sven Hartge  <netcomics@ds9.argh.org>

        * Netcomics/HTML/Themes/CleanRound.pm,
	Netcomics/HTML/Themes/CleanRoundImbedCaption.pm: made the borders
	stretch automagically to the right width and height by using them as
        background images for the table cells surrounding the comic, so the
        browser will render them The Right Way[tm].
        * Netcomics/HTML/Themes/CleanRound.pm: {'caption'} was already
        defined in Defaul.pm, no need to repeat it here the same way

2002-06-10  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile.PL (@pm_to_install): Added
	Netcomics/HTML/Themes/CleanRoundImbedCaption.pm.
	* MANIFEST: Added Netcomics/HTML/Themes/CleanRoundImbedCaption.pm.
	* Netcomics/HTML/Themes/CleanRoundImbedCaption.pm: Created as a
	subclass of CleanRound that only changes CleanRound's caption
	and body html elements.  In the caption element, changed from the
	previous version in CleanRound by Removing changing the text's
	font, adding <tr></tr> around it, and adding width & height
	specifiers.
	* Netcomics/HTML/Themes/CleanRound.pm: Moved caption back outside
	of the borders.

2002-06-10  Sven Hartge  <netcomics@ds9.argh.org>

        * Netcomics/HTML/Themes/CleanRound.pm: made the comics centered on
	the page, moved caption closer to related image into the rounded
	borders (was feeling lonely outside).
	