@@ -1,3 +1,7 @@
+2002-07-03  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
+
+	* Makefile.PL: Made creating archives less verbose.
+
 2002-07-02  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
 	* doc/show_comics.pod: Fixed unterminated list.
